--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--light-dark);
   width: 100%;
   height: 100%;
 }
@@ -31,6 +30,6 @@ code {
     monospace;
 }
 
-h1 {
+h1, h3 {
   margin: 0;
 }
