--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,11 @@
 .projects {
   padding: 50px;
 }
+
+.project-cards {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
