--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -3,6 +3,7 @@
     border-radius: 10px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     padding: 15px;
+    background-color: var(--eerie-black);
 }
 
 .card-body {
