--- a/src/components/PersonalDescription/PersonalDescription.css
+++ b/src/components/PersonalDescription/PersonalDescription.css
@@ -1,3 +1,3 @@
-.personal-description-wrapper {
-    max-width: 560px;
+#personal-description-wrapper p:last-child {
+    margin-block-end: 0rem !important;
 }
