--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,9 +1,8 @@
 .card {
-    width: 50vw;
     border-radius: 10px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     padding: 15px;
-    background-color: var(--eerie-black);
+    background-color: var(--secondary);
 }
 
 .card-body {
@@ -13,14 +12,8 @@
     justify-content: center;
 }
 
-.card-text {
-    width: 80%;
-    padding-right: 15px;
-}
-
 .card-image {
-    width: 20%;
-    height: 80%;
+    width: 100%;
     margin-left: auto;
 }
 
