--- a/src/App.css
+++ b/src/App.css
@@ -39,14 +39,6 @@ span {
   }
 }
 
-/* 600 wide or less */
-@media screen and (max-width: 600px) {
-}
-
-/* 800 wide or more */
-@media screen and (min-width: 800px) {
-}
-
 @media screen and (min-width: 1025px) {
   .xl-flex {
     display: flex;
@@ -68,16 +60,10 @@ span {
   background-color: var(--light-dark);
 }
 
-/* @media screen and (max-width: 1200px) {
-  .title {
-    font-size: 1rem !important;
-    transition: font-size 1s;
-  }
-} */
-
 .col {
   flex: 1;
   align-items: center;
+  justify-content: center;
   display: flex;
   flex-direction: column;
 }
